<resources>
    <string name="app_name">HomeAR</string>
    <string name="main_signup">Sign Up! It\'s Free!</string>
    <string name="main_info">Home AR lets you virtually ‘place’ furnishings in your space.
        From sofas and lamps, to rugs and tables, all of the products are rendered in 3D and true to
        scale so you can make sure it’s just the right size, design and functionality for your room.</string>
    <string name="main_login">Log In</string>
    <string name="email_hint">Your E-mail</string>
    <string name="password_hint">Your Password</string>
    <string name="login_google">Log In With Google</string>
    <string name="no_account">Don\'t Have An Account? Sign Up Here!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="authenticating">Authenticating...</string>
    <string name="name_hint">Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_your_cart">Your Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
