<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7EB"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:tint="#8A8A8F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/tv_loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_login"
        android:textColor="#33312E"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/iv_backBtn"
        app:layout_constraintTop_toBottomOf="@+id/iv_backBtn" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:drawableRight="@android:drawable/sym_action_email"
        android:drawableTint="#33312E"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginTitle" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:drawableRight="@android:drawable/ic_secure"
        android:drawableTint="#33312E"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_default_button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="OR"
        android:textColor="#33312E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_default_button"
        android:backgroundTint="#4285F4"
        android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
        android:fontFamily="@font/roboto_medium"
        android:paddingLeft="10dp"
        android:text="@string/login_google"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/no_account"
        android:textColor="#33312E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_google"
        app:layout_constraintStart_toStartOf="@+id/btn_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/forgot_password"
        android:textColor="#33312E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center_horizontal"
        android:textColor="#D50000"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/authenticating"
        android:textColor="#33312E"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/pb_loading"
        app:layout_constraintStart_toStartOf="@+id/pb_loading"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

</androidx.constraintlayout.widget.ConstraintLayout>