<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <View
        android:id="@+id/v_brownbg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_main_roundedcorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_appName"
        android:elevation="20dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_signup"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:elevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_mainInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/main_info"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:elevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:paddingTop="24dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:elevation="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_mainInfo"
        app:layout_constraintStart_toStartOf="@+id/tv_mainInfo" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/main_login"
        android:textColor="#33312E"
        android:textSize="18sp"
        android:elevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/start_screen"
        android:layout_width="415dp"
        android:layout_height="535dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/start_up2"
        app:layout_constraintBottom_toTopOf="@+id/v_brownbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

</androidx.constraintlayout.widget.ConstraintLayout>